# elsa-fyp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
build-test/: CMakeCache.txt
client/: CMakeLists.txt
client/include/client/: utils.h
client/src/: client.cpp  utils.cpp
client/unit_test/: CMakeLists.txt  test.cpp
client_sdk/: CMakeLists.txt  example_config.cfg
client_sdk/include/: application.h  client.h  fix_client.h  order.h  server_response.h  test_client.h  test_server.h
client_sdk/src/: application.cpp  client.cpp  fix_client.cpp
client_sdk/unit_test/: CMakeLists.txt  test.cpp
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx  index.css
gateway/: CMakeLists.txt
gateway/src/: gatewayApplication.cpp  gatewayApplication.h  id_generator.h  main.cpp
gateway/unit_test/: test.cpp
integration_test/: CMakeLists.txt  test.cpp  test_client.cpp  test_sdk_with_server.cpp  test_server.cpp
matching_engine/: CMakeLists.txt
matching_engine/include/: matching_engine.h
matching_engine/src/: limit_order_book.cpp  limit_order_book.h  main.cpp  matching_engine.cpp  order.cpp  order.h
matching_engine/unit_test/: CMakeLists.txt  limit_order_book_test.cpp  matching_engine_test.cpp
scripts/: build_test.sh
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
